examples/good/02-comparison.tx
fun main(): Void {
  printBool(1 > 2);
  printBool(1 <= 2);

  printBool(1 >= 2);
  printBool(1 <= 2);

  printBool(1 == 1);
  printBool(1 == 2);
  printBool(1 != 1);
  printBool(1 != 2);

  printBool((1 + 1) != 11);
  printBool((1 + 1) == 2);

  printBool((1 + 1 + 1) > 10);
  printBool((1 + 1 + 1) <= 10);

  return;
}
