examples/bad/05-if-else.tx
fun main(): Void {
  if(False) {
    printString("True");
  } else
    printString("False");

  return;
}